--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^11.0.1",
-    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fastify-plugin": "^5.0.1",
-    "jsdom": "^26.1.0",
     "mongoose": "^8.15.0",
-    "puppeteer": "^24.8.2",
-    "random-useragent": "^0.5.0"
+    "puppeteer": "^24.8.2"
   }
 }
